src/snapshots/tests__Duplicate without using a range.snap
---
source: src/lib.rs
expression: "parse(\"hostname4.iml.com,hostname4.iml.com\")"
---
Ok(
    {
        "hostname4.iml.com",
    },
)
