src/snapshots/tests__Empty expression.snap
---
source: src/lib.rs
expression: "parse(\"\")"
---
Err(
    Errors {
        position: 0,
        errors: [
            Unexpected(
                Static(
                    "no host found",
                ),
            ),
        ],
    },
)
