src/snapshots/tests__Ending an expression with a comma.snap
---
source: src/lib.rs
expression: "parse(\"hostname[1],\")"
---
Err(
    Errors {
        position: 12,
        errors: [
            Unexpected(
                Static(
                    "no host found",
                ),
            ),
        ],
    },
)
