src/snapshots/tests__Multiple ranges per hostname in which the difference is 1.snap
---
source: src/lib.rs
expression: "parse(\"hostname[1,2-3].iml[2,3].com,hostname[3,4,5].iml[2,3].com,hostname[5-6,7].iml[2,3].com\")"
---
Ok(
    {
        "hostname1.iml2.com",
        "hostname1.iml3.com",
        "hostname2.iml2.com",
        "hostname2.iml3.com",
        "hostname3.iml2.com",
        "hostname3.iml3.com",
        "hostname4.iml2.com",
        "hostname4.iml3.com",
        "hostname5.iml2.com",
        "hostname5.iml3.com",
        "hostname6.iml2.com",
        "hostname6.iml3.com",
        "hostname7.iml2.com",
        "hostname7.iml3.com",
    },
)
