src/snapshots/tests__No separation between dash and comma.snap
---
source: src/lib.rs
expression: "parse(\"hostname[1-,2].iml.com\")"
---
Err(
    Errors {
        position: 10,
        errors: [
            Unexpected(
                Token(
                    '-',
                ),
            ),
            Expected(
                Token(
                    ',',
                ),
            ),
            Expected(
                Token(
                    ']',
                ),
            ),
        ],
    },
)
