src/snapshots/tests__Padding with a single and double digit number.snap
---
source: src/lib.rs
expression: "parse(\"hostname[06-10]\")"
---
Ok(
    {
        "hostname06",
        "hostname07",
        "hostname08",
        "hostname09",
        "hostname10",
    },
)
